fix(styles): introduce spacing variables and refactor dimensions

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,6 +2,22 @@
   --font-family-base: "Inter", sans-serif;
   --font-family-accent: "EB Garamond", serif;
 
+  --spacing-2: 0.125rem;
+  --spacing-4: 0.25rem;
+  --spacing-8: 0.5rem;
+  --spacing-12: 0.75rem;
+  --spacing-16: 1rem;
+  --spacing-20: 1.25rem;
+  --spacing-24: 1.5rem;
+  --spacing-28: 1.75rem;
+  --spacing-32: 2rem;
+  --spacing-36: 2.25rem;
+  --spacing-40: 2.5rem;
+  --spacing-48: 3rem;
+  --spacing-64: 4rem;
+  --spacing-80: 5rem;
+  --spacing-120: 7.5rem;
+
   --color-palette-black: #000000;
   --color-palette-black-950: #131313;
 
@@ -17,9 +33,6 @@
   --transition-duration: 0.2s;
 
   --container-width: 20rem;
-  --container-padding-x: 1.25rem;
-
-  --section-padding-y: 1.875rem;
 }
 
 .visually-hidden {
@@ -36,7 +49,8 @@
 }
 
 section {
-  padding-block: var(--section-padding-y);
+  padding-block: var(--spacing-20);
+  padding-inline: var(--spacing-20);
 }
 
 body {
@@ -54,15 +68,18 @@ a {
   color: inherit;
 }
 
+h2 {
+  font-size: 2rem;
+}
+
 h3 {
   font-size: 1rem;
 }
 
 .container {
-  max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
+  max-width: calc(var(--container-width) + var(--spacing-20) * 2);
 
   margin-inline: auto;
-  padding-inline: var(--container-padding-x);
 }
 
 .background-theme {
@@ -85,14 +102,15 @@ header .logo {
   display: flex;
   justify-content: space-between;
 
-  padding-block: 1.5rem;
+  padding-block: var(--spacing-24);
+  padding-inline: var(--spacing-20);
 }
 
 .menu__list {
   display: flex;
   flex-direction: column;
 
-  row-gap: 0.9375rem;
+  row-gap: var(--spacing-12);
 }
 
 .menu__link_current {
@@ -133,13 +151,13 @@ header .logo {
   display: flex;
   justify-content: space-between;
 
-  column-gap: 1rem;
+  column-gap: var(--spacing-16);
 
-  margin-bottom: 1rem;
+  margin-bottom: var(--spacing-16);
 }
 
 .article-list__item + .article-list__item .article__header {
-  margin-top: 1.5rem;
+  margin-top: var(--spacing-24);
 }
 
 .article__title {
